<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="eighth_button">নামাজের ভিতরের দোয়া</string>
    <string name="nineth_button">জানাযা নামাজের দোয়া</string>
    <string name="tenth_button">দৈনন্দীন দোয়া</string>
    <string name="ayatul_kursi_button">আয়াতুল কুরসী</string>
    <string name="first_button"><b>সুরা-ফাতিহা</b>\nআয়াত-৭,মাক্কী</string>
    <string name="second_button"><b>সুরা-নাস</b>\nআয়াত-৬,মাক্কী</string>
    <string name="third_button"><b>সুরা-ফালাক</b>\nআয়াত-৫,মাক্কী</string>
    <string name="fourth_button"><b>সুরা-ইখলাস</b>\nআয়াত-৪,মাক্কী</string>
    <string name="fifth_button"><b>সুরা-লাহাব</b>\nআয়াত-৫,মাক্কী</string>
    <string name="sisth_button"><b>সুরা-নাসর</b>\nআয়াত-৩,মাদানী</string>
    <string name="seven_button"><b>সুরা-কাফিরূন</b>\nআয়াত-৬,মাক্কী</string>
    <string name="eight_button"><b>সুরা-কাউসার</b>\nআয়াত-৩,মাক্কী</string>
    <string name="nine_button"><b>সুরা-মাউন</b>\nআয়াত-৭,মাক্কী</string>
    <string name="ten_button"><b>সুরা-কুরাইশ</b>\nআয়াত-৪,মাক্কী</string>
    <string name="eleven_button"><b>সুরা-ফীল</b>\nআয়াত-৫,মাক্কী</string>
    <string name="twelve_button"><b>সুরা-হূমাযাহ</b>\nআয়াত-৯,মাক্কী</string>
    <string name="thirteen_button"><b>সুরা-আসর</b>\nআয়াত-৩,মাক্কী</string>
    <string name="fourteen_button"><b>সুরা-তাকাসুর</b>\nআয়াত-৮,মাক্কী</string>
    <string name="fifteen_button"><b>সুরা-ক্বারিআহ</b>\nআয়াত-১১,মাক্কী</string>
    <string name="sixteen_button"><b>সুরা-আদিয়াত</b>\nআয়াত-১১,মাক্কী</string>
    <string name="seventeen_button"><b>সুরা-যিলযাল</b>\nআয়াত-৮,মাক্কী</string>
    <string name="eightteen_button"><b>সুরা-বাইয়্যিনাহ</b>\nআয়াত-৮,মাক্কী</string>
    <string name="nineteen_button"><b>সুরা-ক্বাদর</b>\nআয়াত-৫,মাক্কী</string>
    <string name="twenty_button"><b>সুরা-আলাক্ব</b>\nআয়াত-১৯,মাক্কী</string>
    <string name="twenty_one_button"><b>সুরা-ত্বীন</b>\nআয়াত-৮,মাক্কী</string>
    <string name="twenty_two_button"><b>সুরা-ইনশিরাহ</b>\nআয়াত-৮,মাক্কী</string>
    <string name="twenty_three_button"><b>সুরা-দুহা</b>\nআয়াত-১১,মাক্কী</string>
    <string name="twenty_four_button"><b>সুরা-লাইল</b>\nআয়াত-২১,মাক্কী</string>
    <string name="twenty_five_button"><b>সুরা-শামস</b>\nআয়াত-১৫,মাক্কী</string>
    <string name="quran_page_header1"> اِقۡرَاۡ بِاسۡمِ رَبِّکَ الَّذِیۡ خَلَقَ</string>
    <string name="quran_page_header2">পড় তোমার প্রভুর নামে যিনি তোমাকে সৃষ্টি করেছেন।</string>
    <string name="hadis_page_header1"> بَلِّغُوا عَنِّي وَلَوْ آيَةً </string>
    <string name="hadis_page_header2">আমার পক্ষ হইতে একটি বাণী হলেও পৌছায় দাও।</string>
    <string name="AlertDialog_Message">আপনি কি এই অ্যাপ থেকে বের হতে চাচ্ছেন?</string>
    <string name="sura_fatiha_title"><b>সুরা ফাতিহা</b>\nঅর্থ-সূচনা</string>
    <string name="sura_fatiha"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_fatiha_ayat_1">ٱلْحَمْدُ لِلَّهِ رَبِّ ٱلْعَٰلَمِينَ ١</string>
    <string name="sura_fatiha_ortho_1">সকল প্রশংসা আল্লাহর,যিনি জগৎ সমূহের প্রতিপালক।</string>
    <string name="sura_fatiha_ayat_2">ٱلرَّحْمَٰنِ ٱلرَّحِيمِ  ٢</string>
    <string name="sura_fatiha_ortho_2">যিনি পরম করুণাময় অতি দয়ালু।</string>
    <string name="sura_fatiha_ayat_3">مَٰلِكِ يَوْمِ ٱلدِّينِ  ٣</string>
    <string name="sura_fatiha_ortho_3">যিনি কেয়ামত দিবসের মালিক।</string>
    <string name="sura_fatiha_ayat_4">إِيَّاكَ نَعْبُدُ وَإِيَّاكَ نَسْتَعِينُ  ٤</string>
    <string name="sura_fatiha_ortho_4">আমরা তোমারই এবাদত করি, এবং তোমারই কাছে সাহায্য প্রার্থনা করি।</string>
    <string name="sura_fatiha_ayat_5">ٱهْدِنَا ٱلصِّرَٰطَ ٱلْمُسْتَقِيمَ  ٥</string>
    <string name="sura_fatiha_ortho_5">আমাদের তুমি সহজ-সঠিক পথে পরিচালিত করো।</string>
    <string name="sura_fatiha_ayat_6">صِرَٰطَ ٱلَّذِينَ أَنْعَمْتَ عَلَيْهِمْ  ٦</string>
    <string name="sura_fatiha_ortho_6">তাদের পথে যাদের প্রতি তুমি নিয়ামত অর্পণ করেছ, তাদের ব্যতীত যাদের প্রতি গযব এসেছে, এবং তাদেরও নয় যারা পথভ্রষ্ট।</string>
    <string name="sura_fatiha_ayat_7">غَيْرِ ٱلْمَغْضُوبِ عَلَيْهِمْ وَلَا ٱلضَّآلِّينَ  ٧</string>
    <string name="sura_fatiha_ortho_7">তাদের ব্যতীত যাদের প্রতি গযব এসেছে, এবং তাদেরও নয় যারা পথভ্রষ্ট।</string>
    <string name="sura_nas_title"><b>সুরা নাস</b>\nঅর্থ-মানবজাতী</string>
    <string name="sura_nas"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_nas_ayat_1">قُلۡ أَعُوذُ بِرَبِّ ٱلنَّاسِ ١</string>
    <string name="sura_nas_ortho_1">বলুন, আমি আশ্রয় গ্রহণ করছি মানুষের পালনকর্তার।</string>
    <string name="sura_nas_ayat_2">مَلِكِ ٱلنَّاسِ ٢</string>
    <string name="sura_nas_ortho_2">মানুষের অধিপতির,</string>
    <string name="sura_nas_ayat_3">إِلَـٰهِ ٱلنَّاسِ ٣</string>
    <string name="sura_nas_ortho_3">মানুষের মাবুদের,</string>
    <string name="sura_nas_ayat_4">مِن شَرِّ الْوَسْوَاسِ الْخَنَّاسِ  ٤</string>
    <string name="sura_nas_ortho_4">তার অনিষ্ট থেকে, যে কুমন্ত্রণা দেয় ও আত্মগোপন করে,</string>
    <string name="sura_nas_ayat_5">الَّذِي يُوَسْوِسُ فِي صُدُورِ النَّاسِ  ٥</string>
    <string name="sura_nasor_title"><b>সুরা নাসর</b>\nঅর্থ-সাহায্য</string>
    <string name="sura_nasor"><b>بِسْمِ ٱللَّهِ ٱلرَّحْمَٰنِ ٱلرَّحِيم</b></string>
    <string name="sura_nasor_ayat_1">إِذَا جَآءَ نَصْرُ ٱللَّهِ وَٱلْفَتْحُ  ١</string>
    <string name="sura_nasor_ortho_1">যখন আসবে আল্লাহর সাহায্য ও বিজয়,</string>
    <string name="sura_nasor_ayat_2">وَرَأَيْتَ ٱلنَّاسَ يَدْخُلُونَ فِى دِينِ ٱللَّهِ أَفْوَاجًا  ٢</string>
    <string name="sura_nasor_ortho_2">এবং আপনি মানুষকে দলে দলে আল্লাহর দ্বীনে প্রবেশ করতে দেখবেন,</string>
    <string name="sura_nasor_ayat_3">فَسَبِّحْ بِحَمْدِ رَبِّكَ وَٱسْتَغْفِرْهُ إِنَّهُۥ كَانَ تَوَّابًۢا  ٣</string>
    <string name="sura_nasor_ortho_3">তখন আপনি আপনার পালনকর্তার পবিত্রতা বর্ণনা করুন এবং তাঁর কাছে ক্ষমা প্রার্থনা করুন। নিশ্চয় তিনি ক্ষমাকারী (এবং তওবা কবুলকারী)।</string>
    <string name="taSha_hud"> التَّحِيَّاتُ لِلّٰهِ وَالصَّلَوَاتُ وَالطَّيِّبَاتُ، اَلسَّلَامُ عَلَيْكَ أَيُّهَا النَّبِيُّ وَرَحْمَةُ اللهِ وَبَرَكَاتُهُ، اَلسَّلَامُ عَلَيْنَا وَ عَلٰى عِبَادِ اللهِ الصَّالِحِيْنَ، أَشْهَدُ أَنْ لَا إِلٰهَ إِلَّا اللهُ، وَأَشْهَدُ أَنَّ مُحَمَّدًا عَبْدُهُ وَ رَسُوْلُهُ </string>
    <string name="taSha_hud_uccaron">উচ্চারণ: আত্তাহিয়্যাতু লিল্লাহি, ওয়াস সালাওয়াতু, ওয়াত- তাইয়্যিবাতু, আস সালামু আলাইকা, আইয়্যুহান নাবিয়্যু, ওয়া রাহমাতুল্লাহি ওয়া বারাকাতুহ, আস সালামু আলাইনা, ওয়া আলা ইবাদিল্লাহিস-সালিহীন। আশহাদু আল- লা ইলাহা ইল্লাল্লাহু, ওয়া আশহাদু আন্না মুহাম্মাদান আবদুহু ওয়া রাসূলুহু। </string>
    <string name="taSha_hud_ortho">অর্থ: আমাদের সব সালাম শ্রদ্ধা, আমাদের সব নামাজ এবং সকল প্রকার পবিত্রতা একমাত্র আল্লাহর উদ্দেশ্যে। হে নবি, আপনার প্রতি সালাম, আপনার উপর আল্লাহর রহমত এবং অনুগ্রহ বর্ষিত হউক । আমাদের ও আল্লাহর নেক বান্দাদের ওপর আল্লাহর রহমত এবং অনুগ্রহ বর্ষিত হউক। আমি সাক্ষ্য দিচ্ছি যে, আল্লাহ ছাড়া আর কেউ নেই, আমি আরও সাক্ষ্য দিচ্ছি যে, মুহাম্মাদ আল্লাহর বান্দা এবং রাসুল। </string>
    <string name="durud_shorif"> اَللَّهُمَّ صَلِّ عَلَى مُحَمَّدٍ وَعَلَى اَلِ مُحَمَّدٍ كَمَا صَلَّيْتَ عَلَى اِبْرَا هِيْمَ وَعَلَى اَلِ اِبْرَ اهِيْمَ اِنَّكَ حَمِيْدٌ مَّجِيْدٌ- اَللَّهُمَّ بَارِكْ عَلَى مُحَمَّدٍ وَعَلَى اَلِ مُحَمَّدٍ كَمَا بَارَكْتَ عَلَى اِبْرَا هِيْمَ وَعَلَى اَلِ اِبْرَا هِيْمَ اِنَّكَ حَمِيْدٌمَّجِيْدٌ </string>
    <string name="durud_shorif_uccaron">উচ্চারণ: আললাহুম্মা সাললিআলা মুহাম্মাদিঁ ওয়া আলা আলি মুম্মাদিন কামা সাললাইতা আলা ইব্রাহীমা ওয়া আলা আলি ইব্রাহীমা ইন্নাকা হামিদুম্মাজীদ। আললাহুম্মা বারিক আলা মুহাম্মাদিঁ ওয়া আলা আলি মুহাম্মাদিন কামা বারাকতা আলা ইব্রাহীমা ওয়া আলা আলি ইব্রাহীমা ইন্নাকা হামীদুম্মাজীদ। </string>
    <string name="durud_shorif_ortho">অর্থ: হে আল্লাহ! মুহাম্মদ (সাল্লাললাহু আলাইহি ওয়া সাললাম) এবং তাঁহার বংশধরগণের উপর ঐরূপ আশীর্বাদ অবতীর্ণ কর যেইরূপ আর্শীবাদ হযরত ইব্রাহিম এবং তাঁহার বংশধরগণের উপর অবতীর্ণ করিয়াছ। নিশ্চয়ই তুমি প্রশংসা ভাজন এবং মহামহিম। হে আল্লাহ! মুহাম্মদ (সাল্লাললাহু আলাইহি ওয়া সাললাম) এবং তাঁহার বংশধরগণের উপর সেইরূপ অনুগ্রহ কর যে রূপ অনুগ্রহ ইব্রাহীম এবং তাঁহার বংশরগণের উপর করিয়াছ। নিশ্চয়ই তুমি প্রশংসা ভাজন এবং মহামহিম। </string>
    <string name="doa_masura"> اللَّهُمَّ إِنِّي ظَلَمْتُ نَفْسِي ظُلْمًا كَثِيرًا، وَلَا يَغْفِرُ الذُّنُوبَ إِلَّا أَنْتَ. فَاغْفِرْ لِي مَغْفِرَةً مِنْ عِنْدِكَ، وَارْحَمْنِي إِنَّكَ أَنْتَ الْغَفُورُ الرَّحِيمُ </string>
    <string name="doa_masura_uccaron">উচ্চারণঃ আল্লাহুম্মা ইন্নী যালামতু নাফসী যুল্মান কাসীরাওঁ ওয়ালা ইয়াগ ফিরুয যুনূবা ইল্লা আন্তা; ফাগফির লী মাগফিরাতাম মিন ইন্দিকা ওয়ার হামনী ইন্নাকা আন্তাল গফুরুর রাহীম। </string>
    <string name="doa_masura_ortho">অর্থ: হে আল্লাহ্! আমি আমার নিজ আত্মার উপর বড়ই অত্যাচার করেছি, গুনাহ মাফকারী একমাত্র তুমিই; অতএব তুমি আপনা হইতে আমাকে সম্পূর্ণ ক্ষমা কর এবং আমার প্রতি দয়া কর। তুমি নিশ্চয়ই ক্ষমাশীল দয়ালু। </string>
    <string name="doa_kunut"> اَللَّهُمَّ اِنَّ نَسْتَعِيْنُكَ وَنَسْتَغْفِرُكَ وَنُؤْمِنُ بِكَ وَنَتَوَكَّلُ عَلَيْكَ وَنُثْنِىْ عَلَيْكَ الْخَيْرَ وَنَشْكُرُكَ وَلاَ نَكْفُرُكَ وَنَخْلَعُ وَنَتْرُكُ مَنْ يَّفْجُرُكَ-اَللَّهُمَّ اِيَّاكَ نَعْبُدُ وَلَكَ نُصَلِّىْ وَنَسْجُدُ وَاِلَيْكَ نَسْعَى وَنَحْفِدُ وَنَرْجُوْ رَحْمَتَكَ وَنَخْشَى عَذَابَكَ اِنَّ عَذَابَكَ بِالْكُفَّارِ مُلْحِقٌ </string>
    <string name="doa_kunut_uccaron">উচ্চারণ : আল্লাহুম্মা ইন্না নাস্তাঈনুকা, ওয়া নাস্তাগফিরুকা, ওয়া নুমিনু বিকা, ওয়া নাতাওয়াকালু আলাইকা, ওয়া নুছনী আলাইকাল খাইরা, ওয়া নাশকুরুকা, ওয়ালা নাকফুরুকা, ওয়া নাখলাউ, ওয়া নাতরুকু মাঁই ইয়াফজুরুকা । আল্লাহুম্মা ইয়্যাকা নাবুদু ওয়া লাকানুসল্লী, ওয়া নাসজুদু, ওয়া ইলাইকা নাসআ, ওয়া নাহফিদু, ওয়া নারজু রাহমাতাকা, ওয়া নাখশা আযাবাকা, ইন্না আযাবাকা বিল কুফ্ফারি মুলহিক্ক।ُ </string>
    <string name="doa_kunut_ortho">অর্থ: হে আল্লাহ আমরা তোমারই সাহায্য চাই, তোমারই নিকট ক্ষমা চাই, তোমারই প্রতি ঈমান রাখি, তোমারই ওপর ভরসা করি এবং সকল, মঙ্গল তোমারই দিকে ন্যস্ত করি। আমরা তোমার কৃতজ্ঞ হয়ে চলি অকৃতজ্ঞ হই না, হে আল্লাহ আমরা তোমারই দাসত্ব করি তোমারই জন্য নামায পড়ি এবং তোমাকেই সিজদাহ করি, আমরা তোমারই দিকে দৌড়াই ও এগিয়ে চলি। আমরা তোমারই রহমত, আশা করি এবং তোমার আযাবকে ভয় করি আর তোমার আযাবতো কাফেরদের জন্যই র্নিধারিত </string>
    <string name="sana">سُبْحَانَكَ اللَّهُمَّ وَبِحَمْدِكَ وَتَبَارَكَ اسْمُكَ وَتَعَالَى جَدُّكَ وَلَا إِلَهَ غَيْرُكَ</string>
    <string name="sana_uccaron">উচ্চারণ : সুবহা-না কাল্লা-হুম্মা ওয়া বিহাম্ দিকা ওয়াতাবার কাস্ মুকা ওয়াতা’ আ-লা জাদ্দুকা ওয়া লা-ইলা-হা গাইরুক। </string>
    <string name="sana_ortho">অর্থ- হে আল্লাহ ! আমি আপনার পবিত্রতা ঘোষণা করছি এবং আপনার মহিমা বর্ণনা করছি। আপনার নাম বরকতময়, আপনার মাহাত্ম্য সর্বোচ্চ এবং আপনি ভিন্ন কেহই ইবাদতের যোগ্য নয় । </string>
    <string name="ruku">سُبْحَانَ رَبِّيَ الْعَظِيْمِ</string>
    <string name="ruku_tasbih">উচ্চারনঃ সুবহানা রাব্বিয়াল আযীম।</string>
    <string name="ruku_tasbih_ortho">অর্থ-মহান প্রতিপালকের পবিত্রতা ও মহাত্মতা ঘোষণা করছি ।</string>
    <string name="ruku_imam">سَمِعَ اللهُ لِمَنْ حَمِدَة</string>
    <string name="ruku_tasbih_imam">উচ্চারণ : সামি‘আল্লা-হু লিমান হামিদাহ।</string>
    <string name="ruku_tasbih_ortho_imam">অর্থ- হে আমার প্রভু, সমস্ত প্রশংসা আপনারই ।</string>
    <string name="ruku_2">رَبَّنَا وَلَكَ الْحَمْدُ، حَمْداً كَثيراً طَيِّباً مُبارَكاً فِيهِ</string>
    <string name="ruku_tasbih_2">উচ্চারণ : রব্বানা ওয়া লাকাল হামদু, হামদান কাছিরান ত্বায়্যিবান মুবা-রাকান ফিহি। (বুখারি)</string>
    <string name="ruku_tasbih_ortho_2">অর্থ : হে আমাদের প্রতিপালক! আর আপনার জন্যই সমস্ত প্রশংসা; অঢেল, পবিত্র ও বরকত-রয়েছে-এমন প্রশংসা। </string>
    <string name="sijdah">سُبْحَانَ رَبِّيَ الْأَعْلَى</string>
    <string name="sijdah_tasbih">উচ্চারণ- সুবহা-না রাব্বিয়াল আ’লা। </string>
    <string name="sijdah_tasbih_ortho">অর্থ- আমার প্রতিপালক যিনি সর্বশ্রেষ্ট, তারই পবিত্রতা বর্ণনা করছি । </string>
    <string name="sijdah_2">اَللّهُمَّ اغْفِرْلِيْ وَارْحَمْنِي وَاهْدِنِيْ وَعَافِنِيْ وَارْزُقْنِيْ</string>
    <string name="sijdah_tasbih_2">উচ্চারণ : আল্লাহুম্মাগফিরলি, ওয়ারহামনি, ওয়াহদিনি, ওয়া আফিনি, ওয়ারযুকনি। (মুসলিম, মিশকাত)</string>
    <string name="sijdah_tasbih_ortho_2">অর্থ : হে আল্লাহ আপনি আমাকে মাফ করুন, আমাকে রহম করুন, আমাকে হেদায়েত দান করুন, আমাকে শান্তি দান করুন এবং আমাকে রিজিক দান করুন।</string>
</resources>