<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Namajer_Doa">

    <LinearLayout
        android:padding="10dp"
        android:background="#F1D9D9"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/aaa"
            android:layout_marginBottom="30dp"
            />

        <LinearLayout
            android:background="#D0F7F8F8"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="সানা :"
                />


            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sana"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sana_uccaron"
                />


            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sana_ortho"
                />

        </LinearLayout>


        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:background="#D0F7F8F8"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="রুকুর তাসবীহ :"
                />

            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruku"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruku_tasbih"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruku_tasbih_ortho"
                />

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:background="#D0F7F8F8"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="23sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="রুকু হইতে সোজা হয়ে দাঁড়িয়ে পড়িবার দোয়া (ইমাম পড়িবে) :"
                />

            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruku_imam"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruku_tasbih_imam"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruku_tasbih_ortho_imam"
                />

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:background="#D0F7F8F8"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="23sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="রুকু হইতে সোজা হয়ে দাঁড়িয়ে পড়িবার দোয়া :"
                />

            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruku_2"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruku_tasbih_2"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ruku_tasbih_ortho_2"
                />

        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:background="#D0F7F8F8"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="সিজদাহ'র দোয়া :"
                />

            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sijdah"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sijdah_tasbih"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sijdah_tasbih_ortho"
                />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:background="#D0F7F8F8"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="দুই সিজদার মাঝের দোয়া :"
                />

            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sijdah_2"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sijdah_tasbih_2"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sijdah_tasbih_ortho_2"
                />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:background="#D0F7F8F8"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="তাশাহুদ :"
                />

            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taSha_hud"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taSha_hud_uccaron"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/taSha_hud_ortho"
                />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:background="#D0F7F8F8"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="দুরুদ শরীফ :"
                />

            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/durud_shorif"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/durud_shorif_uccaron"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/durud_shorif_ortho"
                />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:background="#D0F7F8F8"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="দোয়া মাসুরা :"
                />

            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doa_masura"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doa_masura_uccaron"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doa_masura_ortho"
                />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:background="#D0F7F8F8"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:paddingLeft="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/kalpurush"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="দোয়া কুনুত :"
                />

            <TextView
                android:textSize="27sp"
                android:fontFamily="@font/amiri_bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doa_kunut"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doa_kunut_uccaron"
                />

            <TextView
                android:paddingLeft="5dp"
                android:fontFamily="@font/kalpurush"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/doa_kunut_ortho"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>